--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,25 +1,14 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#">Recipe finder</a>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<div class="container">
-  <div class="mt-5">
+<div class="main row">
+  <div class="col-12">
 
     <%= form_tag(search_path, :method => "get", :class => "form-inline" ) do %>
-      <div class="form-group">
-        <%= text_field_tag :terms, nil, { placeholder: "Search for . . .", class: "form-control" } %>
-          <%= submit_tag "Search", :name => nil, :class => "btn btn-secondary" %>
+      <div class="form-row">
+        <div class="input-group">
+          <%= text_field_tag :terms, nil, { placeholder: "Search for . . .", class: "form-control" } %>
+          <span class="input-group-addon">
+            <%= submit_tag "Search", :name => nil, :class => "btn btn-secondary" %>
+          </span>
+        </div>
       </div>
     <% end %>
 
@@ -37,4 +26,5 @@
     </table>
 
   </div>
-</div><!-- /.container -->
+</div>
+
